--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul class="workList mb-9">
             <li>
                 <h3>六角學院 視覺設計實習生 | 2019/07－2020/06</h3>
-                <img src="/images/Group 1.svg" width="90px" height="90px" alt="hexschool">
+                <img src="./images/Group 1.svg" width="90px" height="90px" alt="hexschool">
                 <p>在六角學院長達一年的實習中，前期藉由公司課程掌握 HTML, CSS, <br>
                     Adobe XD，設計給學員使用的名片設計教材，並參與六角週年活動，<br>
                     設計各式周邊商品及活動網路宣傳圖。後期進入 UI 設計範疇，設計六角共<br>
@@ -63,7 +63,7 @@
             </li>
             <li>
                 <h3>Simtree 興趣咖啡 工讀生 | 2018－2019</h3>
-                <img src="/images/simtree.png" alt="simtree">
+                <img src="./images/simtree.png" alt="simtree">
                 <p>擔任外場及吧台服務生，學習咖啡相關知識。</p>
             </li>
         </ul>
