--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="profile mb-6">
             <h1 class="pt-6 pb-2 ">Joanne <br>Chen</h1>
-            <img src="/images/photo.png" class="block pt-6 mb-6" alt="profile_photo">
+            <img src="./images/photo.png" class="block pt-6 mb-6" alt="profile_photo">
             <h2 class="subtitle  mb-2">個人資料<span>PROFILE</span></h2>
             <ul>
                 <li class="mb-3">陳久安 Joanne Chen<br> 1997-<br> 應屆畢業生／接案設計師／UI 設計實習生</li>
